--- a/style.css
+++ b/style.css
@@ -80,41 +80,42 @@ body{
     flex-direction: column;
     justify-content: center;
 }
+
 .parametro-senha{
     width: 50%;
     margin: 0 auto;
 }
 
 .parametro-senha-botoes{
-display: flex;
-justify-content: center;
+    display: flex;
+    justify-content: center;
 }
-
 
 .parametro-senha__botao{
-   background-color: var(--cor-de-fundo) ;
-   color: var(--branco);
-   border: 2px solid var(--borda);
-   padding: 24px;
-   font-size: 24px;
-cursor: pointer;
+    background-color: var(--cor-de-fundo);
+    color: var(--branco);
+    border: 2px solid var(--borda);
+    padding: 24px;
+    font-size: 24px;
+    cursor: pointer;
 }
-.parametro-senha__texto{
-    border-top:2px solid var(--borda) ;
-    border-bottom:2px solid var(--borda) ;
-padding:24px ;
-margin: 0px;
-font-size: 24px;
 
+.parametro-senha__texto{
+    border-top: 2px solid var(--borda);
+    border-bottom: 2px solid var(--borda);
+    padding: 24px;
+    margin: 0px;
+    font-size: 24px;
 }
+
 label{
     font-size: 20px;
 }
+
 .checkbox{
     width: 20px;
     height: 20px;
 }
-
 
 .barra{
     background-color: var(--fundo-senha);
@@ -122,35 +123,32 @@ label{
     width: 100%;
 }
 
+
 .forca{
-    height: 30px;
-    position: relative;
-    bottom: 30px;
+height: 30px;
+position: relative;
+bottom: 30px;
 }
 
 .fraca{
     width: 25%;
-    background-color: #e71b32;
+    background-color: #E71B32;
 }
 
 .media{
     width: 50%;
-    background-color: #faf308;
+    background-color: #FAF408;
 }
 
 .forte{
     width: 100%;
-    background-color: #00ff85;
+    background-color: #00FF85;
 }
 
-.parametro-senha-texto{
+.parametro-senha__texto{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-between
 }
-
-
-
-
 
 @media screen and (min-width: 768px) {
     .parametro-coluna__senha{
